[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/testing/penpal",
	"parachains/integration-tests/emulated/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/Users/robert/projects/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/Users/robert/projects/substrate/frame/benchmarking" }
frame-support = { path = "/Users/robert/projects/substrate/frame/support" }
frame-support-procedural = { path = "/Users/robert/projects/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/robert/projects/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/robert/projects/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/robert/projects/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/robert/projects/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/robert/projects/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/robert/projects/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/robert/projects/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/robert/projects/substrate/primitives/externalities" }
sp-std = { path = "/Users/robert/projects/substrate/primitives/std" }
sp-storage = { path = "/Users/robert/projects/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/robert/projects/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/robert/projects/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/robert/projects/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/robert/projects/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/robert/projects/substrate/primitives/io" }
sp-keystore = { path = "/Users/robert/projects/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/robert/projects/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/robert/projects/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/robert/projects/substrate/primitives/trie" }
sp-runtime = { path = "/Users/robert/projects/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/robert/projects/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/robert/projects/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/robert/projects/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/robert/projects/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/robert/projects/substrate/client/block-builder" }
sc-client-api = { path = "/Users/robert/projects/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/robert/projects/substrate/utils/prometheus" }
sc-executor = { path = "/Users/robert/projects/substrate/client/executor" }
sc-executor-common = { path = "/Users/robert/projects/substrate/client/executor/common" }
sc-allocator = { path = "/Users/robert/projects/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/robert/projects/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/robert/projects/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/robert/projects/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/robert/projects/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/robert/projects/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/robert/projects/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/robert/projects/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/robert/projects/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/robert/projects/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/robert/projects/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/robert/projects/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/robert/projects/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/robert/projects/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/robert/projects/substrate/primitives/database" }
sp-rpc = { path = "/Users/robert/projects/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/robert/projects/substrate/test-utils/runtime" }
frame-executive = { path = "/Users/robert/projects/substrate/frame/executive" }
frame-system = { path = "/Users/robert/projects/substrate/frame/system" }
frame-try-runtime = { path = "/Users/robert/projects/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/robert/projects/substrate/frame/balances" }
pallet-transaction-payment = { path = "/Users/robert/projects/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/robert/projects/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/robert/projects/substrate/frame/babe" }
pallet-authorship = { path = "/Users/robert/projects/substrate/frame/authorship" }
pallet-session = { path = "/Users/robert/projects/substrate/frame/session" }
pallet-timestamp = { path = "/Users/robert/projects/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/robert/projects/substrate/primitives/timestamp" }
sp-session = { path = "/Users/robert/projects/substrate/primitives/session" }
sp-staking = { path = "/Users/robert/projects/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/robert/projects/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/robert/projects/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/robert/projects/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/robert/projects/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/robert/projects/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/robert/projects/substrate/test-utils" }
substrate-test-utils-derive = { path = "/Users/robert/projects/substrate/test-utils/derive" }
sc-service = { path = "/Users/robert/projects/substrate/client/service" }
sc-chain-spec = { path = "/Users/robert/projects/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/robert/projects/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/robert/projects/substrate/client/network" }
sc-network-common = { path = "/Users/robert/projects/substrate/client/network/common" }
sc-consensus = { path = "/Users/robert/projects/substrate/client/consensus/common" }
sc-utils = { path = "/Users/robert/projects/substrate/client/utils" }
sp-consensus-grandpa = { path = "/Users/robert/projects/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/robert/projects/substrate/client/network/light" }
sc-network-sync = { path = "/Users/robert/projects/substrate/client/network/sync" }
fork-tree = { path = "/Users/robert/projects/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/robert/projects/substrate/client/telemetry" }
sc-client-db = { path = "/Users/robert/projects/substrate/client/db" }
sc-state-db = { path = "/Users/robert/projects/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/robert/projects/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/robert/projects/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/robert/projects/substrate/frame/system/benchmarking" }
node-primitives = { path = "/Users/robert/projects/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/robert/projects/substrate/frame/alliance" }
pallet-collective = { path = "/Users/robert/projects/substrate/frame/collective" }
pallet-identity = { path = "/Users/robert/projects/substrate/frame/identity" }
pallet-asset-conversion = { path = "/Users/robert/projects/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/robert/projects/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/Users/robert/projects/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/Users/robert/projects/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/robert/projects/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/robert/projects/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/robert/projects/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/robert/projects/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/robert/projects/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/robert/projects/substrate/frame/treasury" }
pallet-utility = { path = "/Users/robert/projects/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/robert/projects/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/Users/robert/projects/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/robert/projects/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/robert/projects/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/robert/projects/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/robert/projects/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/robert/projects/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/robert/projects/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/robert/projects/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/robert/projects/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/robert/projects/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/robert/projects/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/robert/projects/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/robert/projects/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/robert/projects/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/robert/projects/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/robert/projects/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/robert/projects/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/robert/projects/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/robert/projects/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/robert/projects/substrate/frame/offences" }
sp-keyring = { path = "/Users/robert/projects/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/robert/projects/substrate/frame/im-online" }
pallet-indices = { path = "/Users/robert/projects/substrate/frame/indices" }
pallet-lottery = { path = "/Users/robert/projects/substrate/frame/lottery" }
frame-support-test = { path = "/Users/robert/projects/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/Users/robert/projects/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/robert/projects/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/robert/projects/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/robert/projects/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/robert/projects/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/robert/projects/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/robert/projects/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/robert/projects/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/robert/projects/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/robert/projects/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/robert/projects/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/robert/projects/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/robert/projects/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/robert/projects/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/robert/projects/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/robert/projects/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/robert/projects/substrate/frame/referenda" }
pallet-remark = { path = "/Users/robert/projects/substrate/frame/remark" }
pallet-salary = { path = "/Users/robert/projects/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/robert/projects/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/robert/projects/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/robert/projects/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/robert/projects/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/robert/projects/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/robert/projects/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/robert/projects/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/robert/projects/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/robert/projects/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/robert/projects/substrate/frame/statement" }
sp-statement-store = { path = "/Users/robert/projects/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/robert/projects/substrate/frame/sudo" }
pallet-tips = { path = "/Users/robert/projects/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/robert/projects/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/robert/projects/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/robert/projects/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/Users/robert/projects/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/robert/projects/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/robert/projects/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/robert/projects/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/robert/projects/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/robert/projects/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/robert/projects/substrate/client/informant" }
sc-keystore = { path = "/Users/robert/projects/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/robert/projects/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/robert/projects/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/robert/projects/substrate/client/rpc" }
sc-transaction-pool = { path = "/Users/robert/projects/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/robert/projects/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/robert/projects/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/robert/projects/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/robert/projects/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/Users/robert/projects/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/robert/projects/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/Users/robert/projects/substrate/test-utils/client" }
sc-offchain = { path = "/Users/robert/projects/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/robert/projects/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/Users/robert/projects/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/Users/robert/projects/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/Users/robert/projects/substrate/client/cli" }
node-template-runtime = { path = "/Users/robert/projects/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/Users/robert/projects/substrate/frame/aura" }
pallet-template = { path = "/Users/robert/projects/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/Users/robert/projects/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/Users/robert/projects/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/robert/projects/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/Users/robert/projects/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/Users/robert/projects/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/robert/projects/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/Users/robert/projects/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/robert/projects/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/Users/robert/projects/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/Users/robert/projects/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/robert/projects/substrate/test-utils/cli" }
substrate-build-script-utils = { path = "/Users/robert/projects/substrate/utils/build-script-utils" }
node-bench = { path = "/Users/robert/projects/substrate/bin/node/bench" }
node-testing = { path = "/Users/robert/projects/substrate/bin/node/testing" }
node-executor = { path = "/Users/robert/projects/substrate/bin/node/executor" }
node-cli = { path = "/Users/robert/projects/substrate/bin/node/cli" }
node-inspect = { path = "/Users/robert/projects/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/robert/projects/substrate/bin/node/rpc" }
mmr-rpc = { path = "/Users/robert/projects/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/Users/robert/projects/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/robert/projects/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/Users/robert/projects/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/robert/projects/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/robert/projects/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/Users/robert/projects/substrate/client/authority-discovery" }
sc-network-statement = { path = "/Users/robert/projects/substrate/client/network/statement" }
sc-statement-store = { path = "/Users/robert/projects/substrate/client/statement-store" }
sc-storage-monitor = { path = "/Users/robert/projects/substrate/client/storage-monitor" }
sc-service-test = { path = "/Users/robert/projects/substrate/client/service/test" }
substrate-frame-cli = { path = "/Users/robert/projects/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/Users/robert/projects/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/robert/projects/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/Users/robert/projects/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/Users/robert/projects/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/robert/projects/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/Users/robert/projects/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/Users/robert/projects/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/robert/projects/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/Users/robert/projects/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/Users/robert/projects/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/robert/projects/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/Users/robert/projects/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/Users/robert/projects/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/Users/robert/projects/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/Users/robert/projects/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/Users/robert/projects/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/robert/projects/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/Users/robert/projects/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/robert/projects/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/robert/projects/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/robert/projects/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/Users/robert/projects/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/robert/projects/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/Users/robert/projects/substrate/frame/examples/split" }
pallet-nicks = { path = "/Users/robert/projects/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/robert/projects/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/robert/projects/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/robert/projects/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/Users/robert/projects/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/Users/robert/projects/substrate/frame/paged-list/fuzzer" }
pallet-scored-pool = { path = "/Users/robert/projects/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/Users/robert/projects/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/Users/robert/projects/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/Users/robert/projects/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/robert/projects/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/robert/projects/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/robert/projects/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/Users/robert/projects/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/robert/projects/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/robert/projects/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/robert/projects/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/robert/projects/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/Users/robert/projects/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/Users/robert/projects/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/Users/robert/projects/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/Users/robert/projects/substrate/utils/frame/generate-bags/node-runtime" }
substrate = { path = "/Users/robert/projects/substrate" }

