[workspace]
resolver = "2"

members = [
	"bin/millau/node",
	"bin/millau/runtime",
	"bin/rialto/node",
	"bin/rialto/runtime",
	"bin/rialto-parachain/node",
	"bin/rialto-parachain/runtime",
	"bin/runtime-common",
	"fuzz/storage-proof",
	"modules/beefy",
	"modules/grandpa",
	"modules/messages",
	"modules/parachains",
	"modules/relayers",
	"modules/shift-session-manager",
	"primitives/beefy",
	"primitives/chain-bridge-hub-cumulus",
	"primitives/chain-bridge-hub-kusama",
	"primitives/chain-bridge-hub-polkadot",
	"primitives/chain-bridge-hub-rococo",
	"primitives/chain-bridge-hub-wococo",
	"primitives/chain-kusama",
	"primitives/chain-millau",
	"primitives/chain-polkadot",
	"primitives/chain-rialto",
	"primitives/chain-rialto-parachain",
	"primitives/chain-rococo",
	"primitives/chain-westend",
	"primitives/chain-wococo",
	"primitives/header-chain",
	"primitives/messages",
	"primitives/parachains",
	"primitives/polkadot-core",
	"primitives/relayers",
	"primitives/runtime",
	"primitives/test-utils",
	"relays/bin-substrate",
	"relays/client-bridge-hub-kusama",
	"relays/client-bridge-hub-polkadot",
	"relays/client-bridge-hub-rococo",
	"relays/client-bridge-hub-wococo",
	"relays/client-kusama",
	"relays/client-millau",
	"relays/client-polkadot",
	"relays/client-rialto",
	"relays/client-rialto-parachain",
	"relays/client-rococo",
	"relays/client-substrate",
	"relays/client-westend",
	"relays/client-wococo",
	"relays/finality",
	"relays/lib-substrate-relay",
	"relays/messages",
	"relays/parachains",
	"relays/utils",
]
